arregle catalog, audit y appointment, falta notify y report